# Embedded-IPC-Framework

./: CMakeLists.txt  README.md
include/ipc/api/: ipc_client.hpp  ipc_server.hpp
include/ipc/common/: message.hpp  serializer.hpp  types.hpp
include/ipc/core/: event_loop.hpp  ring_buffer.hpp
include/ipc/transport/: itransport.hpp  shm_transport.hpp  uds_transport.hpp
src/ipc/api/: ipc_client.cpp  ipc_server.cpp
src/ipc/core/: event_loop.cpp
src/ipc/transport/: uds_transport.cpp
